@@ -31,12 +31,13 @@ algorithmes qui figent bon nombre d'exceptions.  R&eacute;pertorier
 tous ces cas de figure demanderait un travail consid&eacute;rable, qui
 finalement ne les couvrirait pas tous.
 
-
+<p align="center">
 <img src="@IMAGES@ross-beam-scan.jpeg">
 <p align="center">
 
-<em>R&egrave;gles de formatages d&eacute;finies par l'exemple. Image tir&eacute;e de
-l'ouvrage de Ted Ross &laquo; The Art of Music Engraving &raquo;</em>
+<em>R&egrave;gles de formatages d&eacute;finies par l'exemple. <BR> 
+Image tir&eacute;e de l'ouvrage de Ted Ross &laquo; 
+The Art of Music Engraving &raquo;</em>
 </p>
 
 <p>
@@ -89,10 +90,10 @@ bon nombre de situations, comme pour
 
 <ul>
 <li> d&eacute;terminer la pente d'un lien de croches
-
+<p>
 <img src="@IMAGES@beam-scoring-example.png">,
 <li> formater des accords li&eacute;s
-
+<p>
 <img src="@IMAGES@ties-scoring-example.png">,
 <li> formater des accords avec des valeurs point&eacute;es,
 <li> les sauts de ligne,
