@@ -1,5 +1,5 @@
 <!--
-    Translation of CVS Revision: 1.27
+    Translation of CVS Revision: 1.28
     
     Translators must leave this comment in tact, but remove any dollar
     signs ($) from the CVS Revision indicator.
@@ -78,7 +78,7 @@
   accessibles dans les pages de documentation. Des pages
   s&eacute;par&eacute;es existent pour les versions <a
   href="@DOC@v2.8/examples.html">stable</a> et de
-  <a href="@DOC@v2.7/examples.html">d&eacute;veloppement</a>.
+  <a href="@DOC@v2.9/examples.html">d&eacute;veloppement</a>.
 </p>
 
 <h3>Notation contemporaine</h3>
