@@ -73,7 +73,7 @@
   More samples of the latest LilyPond versions are included in the
   documentation pages.  There are separate pages for the
   <a href="@DOC@v2.8/examples.html">stable</a> and for the
-  <a href="@DOC@v2.7/examples.html">development</a> release.
+  <a href="@DOC@v2.9/examples.html">development</a> release.
 </p>
 
 <h3>Modern music</h3>
